feat: add redux & redux-saga

--- a/src/index-dev.html
+++ b/src/index-dev.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     </head>
     <body>
-        <div class="app"></div>
+        <div class="root"></div>
 
         <% if (!htmlWebpackPlugin.options.IS_FOR_PROD_RUNTIME) { %>
             <style>
@@ -64,7 +64,7 @@
                     opacity: 0;
                     }
 
-                /* имя выбрано с помощью игрального кубика, супер рандомное */
+                /* имя выбрано с помощью игрального кубика, супер рандомное :) */
                 @keyframes __rotate_12351245451451345 {
                     from {
                         transform: rotateX(0deg);
