--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
 </head>
 <body>
 
-    <div class="app"></div>
+    <div class="root"></div>
     <div class="loader">
         <div class="globalCircleLoader"></div>
     </div>
