--- a/src/index.html
+++ b/src/index.html
@@ -13,92 +13,7 @@
         <% } %>
     <% } %>
 
-    <script type="text/javascript">
-        var FADE_TIMEOUT = 100;
-        var REMOVE_TIMEOUT = 400;
-        var isCssLoaded = false;
-        var scriptsTotalCount = <%= Object.keys(htmlWebpackPlugin.options.modernScripts).length %>;
-        var scriptsLoadedCount = 0;
-        var scriptsLoaded = [];
-        var isJsLoaded = false;
-
-        function cssOnLoad() {
-            document.getElementById('main-css-0').media='all';
-            isCssLoaded = true;
-            if (isCssLoaded && isJsLoaded) {
-                assetsOnLoad();
-            }
-        }
-
-        function jsOnLoad(key) {
-            if (scriptsLoaded.indexOf(key) === -1) {
-                scriptsLoaded.push(key);
-                scriptsLoadedCount = scriptsLoaded.length;
-            }
-
-            if (scriptsLoadedCount === scriptsTotalCount) {
-                isJsLoaded = true;
-            }
-
-            if (isCssLoaded && isJsLoaded) {
-                assetsOnLoad();
-            }
-        }
-
-        function assetsOnLoad() {
-            startFadeInOut(FADE_TIMEOUT);
-            removeOverlay(FADE_TIMEOUT + REMOVE_TIMEOUT);
-        }
-
-        function startFadeInOut(timeout) {
-            setTimeout(function() {
-                getApp().classList.add('fadeIn');
-                getLoader().classList.add('fadeOut');
-            }, timeout);
-        }
-
-        function removeOverlay(timeout) {
-            setTimeout(function() {
-                getLoader().style.display = 'none';
-            }, timeout);
-        }
-
-        function getApp() {
-            return document.getElementsByClassName('app')[0];
-        }
-
-        function getLoader() {
-            return document.getElementsByClassName('loader')[0];
-        }
-    </script>
-
     <style>
-        .app {
-            transition: opacity 400ms ease;
-            opacity: 0;
-        }
-        .app.fadeIn {
-            opacity: 1;
-        }
-        .loader {
-            background-color: white;
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: flex;
-            justify-content: center;
-            align-items: start;
-            padding-top: 200px;
-            width: 100%;
-            height: 100%;
-            transition: all 400ms ease;
-            transition-property: opacity, background-color;
-            opacity: 1;
-        }
-        .loader.fadeOut {
-            opacity: 0;
-            background-color: transparent;
-        }
         .globalCircleLoader {
             width: 48px;
             height: 48px;
@@ -109,27 +24,23 @@
     </style>
 
     <% for (key in htmlWebpackPlugin.files.css) { %>
-        <link id="main-css-<%= key %>" href="<%= htmlWebpackPlugin.files.css[key] %>" rel="stylesheet" media="nope!" onload="cssOnLoad()">
+        <link id="main-css-<%= key %>" href="<%= htmlWebpackPlugin.files.css[key] %>" rel="stylesheet">
     <% } %>
 </head>
 <body>
 
     <div class="root"></div>
-    <div class="loader">
-        <div class="globalCircleLoader"></div>
-    </div>
 
     <!-- version: <%= htmlWebpackPlugin.options.BUILD_VERSION %> -->
     <!-- branch: <%= htmlWebpackPlugin.options.BUILD_BRANCH %> -->
 
     <% for (key in htmlWebpackPlugin.options.modernScripts) { %>
-        <script type="module" src="<%= htmlWebpackPlugin.options.modernScripts[key] %>" onload="jsOnLoad(<%= [key] %>)"></script>
+        <script type="module" src="<%= htmlWebpackPlugin.options.modernScripts[key] %>"></script>
     <% } %>
 
     <script nomodule>
         <% for (key in htmlWebpackPlugin.options.legacyScripts) { %>
             var script<%= [key] %> = document.createElement('script');
-            script<%= [key] %>.onload = function() { jsOnLoad(<%= [key] %>); };
             script<%= [key] %>.type = 'text/javascript';
             script<%= [key] %>.src = '<%= htmlWebpackPlugin.options.legacyScripts[key] %>';
             document.body.appendChild(script<%= [key] %>);
